--- a/package.json
+++ b/package.json
@@ -26,16 +26,26 @@
     "build:prod": "NODE_ENV=production webpack --progress --colors",
     "build:watch": "NODE_ENV=development webpack --progress --colors --watch",
     "clean": "rimraf dist/*",
-    "modules": "rimraf node_modules/* && npm i",
-    "test": "ava --concurrency=5",
-    "test:watch": "npm run test -- --watch",
     "lint": "eslint src",
-    "lint:fix": "eslint src --fix"
+    "lint:fix": "eslint src --fix",
+    "modules": "rimraf node_modules/* && npm i",
+    "server": "nodemon --watch ./dist ./dist/index.js",
+    "test": "ava --concurrency=5",
+    "test:watch": "npm run test -- --watch"
   },
   "files": [
     "dist"
   ],
-  "dependencies": {},
+  "dependencies": {
+    "apollo-client": "^1.0.2",
+    "envalid": "^2.4.2",
+    "graphql-tag": "^2.0.0",
+    "isomorphic-fetch": "^2.2.1",
+    "lodash": "^4.17.4",
+    "node-cron": "^1.1.3",
+    "winston": "^2.3.1",
+    "x-ray": "^2.3.2"
+  },
   "peerDependencies": {},
   "devDependencies": {
     "ava": "^0.19.0",
@@ -44,21 +54,19 @@
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.2.2",
+    "babel-preset-env": "^1.3.2",
     "babel-preset-stage-2": "^6.22.0",
     "babel-register": "^6.24.0",
-    "eslint": "^3.18.0",
-    "eslint-config-standard": "^10.0.0",
+    "eslint": "^3.19.0",
+    "eslint-config-standard": "^10.2.0",
     "eslint-plugin-import": "^2.2.0",
     "eslint-plugin-node": "^4.2.2",
     "eslint-plugin-promise": "^3.5.0",
-    "eslint-plugin-standard": "^2.1.1",
-    "invariant": "^2.2.2",
-    "lodash": "^4.17.4",
+    "eslint-plugin-standard": "^3.0.1",
     "rimraf": "^2.6.1",
-    "source-map-loader": "^0.2.0",
+    "source-map-loader": "^0.2.1",
     "uglifyjs-webpack-plugin": "^0.4.1",
-    "webpack": "^2.3.1"
+    "webpack": "^2.3.3"
   },
   "devEngines": {
     "node": "5.x",
@@ -87,8 +95,7 @@
           }
         }
       ],
-      "stage-2",
-      "react"
+      "stage-2"
     ],
     "plugins": [
       "transform-decorators-legacy"
