--- a/package.json
+++ b/package.json
@@ -26,10 +26,12 @@
     "build:prod": "NODE_ENV=production webpack --progress --colors",
     "build:watch": "NODE_ENV=development webpack --progress --colors --watch",
     "clean": "rimraf dist/*",
-    "lint": "eslint src",
-    "lint:fix": "eslint src --fix",
+    "lint": "eslint .",
+    "lint:fix": "eslint . --fix",
     "modules": "rimraf node_modules/* && npm i",
-    "server": "nodemon --watch ./dist ./dist/index.js",
+    "server": "pm2 start --attach ./ecosystem.config.js",
+    "start": "npm run server",
+    "stop": "pm2 stop all",
     "test": "ava --concurrency=5",
     "test:watch": "npm run test -- --watch"
   },
@@ -37,26 +39,30 @@
     "dist"
   ],
   "dependencies": {
+    "@google/maps": "^0.3.1",
     "apollo-client": "^1.0.2",
+    "bluebird": "^3.5.0",
     "envalid": "^2.4.2",
     "graphql-tag": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "node-cron": "^1.1.3",
+    "pm2": "^2.4.4",
+    "request-x-ray": "^0.1.4",
     "winston": "^2.3.1",
     "x-ray": "^2.3.2"
   },
   "peerDependencies": {},
   "devDependencies": {
     "ava": "^0.19.0",
-    "babel-core": "^6.24.0",
+    "babel-core": "^6.24.1",
     "babel-eslint": "^7.2.1",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
     "babel-polyfill": "^6.23.0",
-    "babel-preset-env": "^1.3.2",
-    "babel-preset-stage-2": "^6.22.0",
-    "babel-register": "^6.24.0",
+    "babel-preset-env": "^1.3.3",
+    "babel-preset-stage-2": "^6.24.1",
+    "babel-register": "^6.24.1",
     "eslint": "^3.19.0",
     "eslint-config-standard": "^10.2.0",
     "eslint-plugin-import": "^2.2.0",
@@ -66,7 +72,8 @@
     "rimraf": "^2.6.1",
     "source-map-loader": "^0.2.1",
     "uglifyjs-webpack-plugin": "^0.4.1",
-    "webpack": "^2.3.3"
+    "webpack": "^2.3.3",
+    "webpack-node-externals": "^1.5.4"
   },
   "devEngines": {
     "node": "5.x",
