--- a/package.json
+++ b/package.json
@@ -30,8 +30,7 @@
     "lint:fix": "eslint . --fix",
     "modules": "rimraf node_modules/* && npm i",
     "server": "pm2 start --attach ./ecosystem.config.js",
-    "start": "npm run server",
-    "stop": "pm2 stop all",
+    "start": "node ./dist/index.js",
     "test": "ava --concurrency=5",
     "test:watch": "npm run test -- --watch"
   },
@@ -46,8 +45,7 @@
     "graphql-tag": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
-    "node-cron": "^1.1.3",
-    "pm2": "^2.4.4",
+    "moment": "^2.18.1",
     "request-x-ray": "^0.1.4",
     "winston": "^2.3.1",
     "x-ray": "^2.3.2"
