--- a/package.json
+++ b/package.json
@@ -38,24 +38,28 @@
   ],
   "dependencies": {
     "@google/maps": "^0.3.1",
-    "apollo-client": "^1.0.2",
+    "apollo-client": "^1.0.3",
     "bluebird": "^3.5.0",
     "envalid": "^2.4.2",
+    "es6-error": "^4.0.2",
     "graphql-tag": "^2.0.0",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
+    "moment-timezone": "^0.5.13",
     "request-x-ray": "^0.1.4",
+    "simple-rate-limiter": "^0.2.3",
     "winston": "^2.3.1",
     "x-ray": "^2.3.2"
   },
   "peerDependencies": {},
   "devDependencies": {
-    "ava": "^0.19.0",
+    "ava": "^0.19.1",
     "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.1",
+    "babel-eslint": "^7.2.2",
     "babel-loader": "^6.4.1",
     "babel-plugin-transform-decorators-legacy": "^1.3.4",
+    "babel-plugin-transform-function-bind": "^6.22.0",
     "babel-polyfill": "^6.23.0",
     "babel-preset-env": "^1.3.3",
     "babel-preset-stage-2": "^6.24.1",
@@ -68,7 +72,7 @@
     "eslint-plugin-standard": "^3.0.1",
     "rimraf": "^2.6.1",
     "source-map-loader": "^0.2.1",
-    "uglifyjs-webpack-plugin": "^0.4.1",
+    "uglifyjs-webpack-plugin": "^0.4.2",
     "webpack": "^2.3.3",
     "webpack-node-externals": "^1.5.4"
   },
@@ -102,7 +106,8 @@
       "stage-2"
     ],
     "plugins": [
-      "transform-decorators-legacy"
+      "transform-decorators-legacy",
+      "transform-function-bind"
     ]
   },
   "eslintConfig": {
