--- a/package.json
+++ b/package.json
@@ -50,6 +50,7 @@
     "moment-timezone": "^0.5.13",
     "request-x-ray": "^0.1.4",
     "winston": "^2.3.1",
+    "winston-papertrail": "^1.0.4",
     "x-ray": "^2.3.2"
   },
   "peerDependencies": {},
