Separated import and geocode

--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
     "clean": "rimraf dist/*",
     "commit": "git add -A && git commit -m \"${MSG:-NPM Commit}\" && git push origin master",
     "deploy": "npm run build:prod && npm run commit && git push heroku master",
+    "geocode": "node ./bin/geocodeIncidents",
     "import": "node ./bin/importIncidents",
     "lint": "eslint .",
     "lint:fix": "eslint . --fix",
@@ -48,6 +49,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.18.1",
     "moment-timezone": "^0.5.13",
+    "pluralize": "^4.0.0",
     "request-x-ray": "^0.1.4",
     "winston": "^2.3.1",
     "winston-papertrail": "^1.0.4",
